# IPXml

./: .gitignore  .readthedocs.yaml  Cargo.toml  README.md
.github/workflows/: build.yml  build_rel.yml  pr-build.yml  publish.yml
crates/ipxcs-core/: Cargo.toml
crates/ipxcs-core/src/: lib.rs  ops.rs  tensor.rs
crates/ipxcs-core/tests/: ops.rs
crates/ipxml-bundle/: Cargo.toml
crates/ipxml-bundle/src/: bundle.rs  lib.rs
crates/ipxml-cc/: Cargo.toml
crates/ipxml-cc/src/: main.rs
crates/ipxml-runtime/: Cargo.toml
crates/ipxml-runtime/src/: main.rs
crates/ipxml-schema/: Cargo.toml
crates/ipxml-schema/src/: lib.rs  model.rs
crates/ipxml-ui-core/: Cargo.toml
crates/ipxml-ui-core/src/: components.rs
crates/ipxml-ui-egui/: Cargo.toml
crates/ipxml-ui-egui/src/: app.rs  editor.rs  lib.rs
docs/: README.md  docusaurus.config.js  package-lock.json  package.json  sidebars.js
docs/docs/: beginner-guide.md  bundles.md  cli.md  faq.md  getting-started.md  index.md  pipelines.md  preprocess-postprocess.md  roadmap.md  runtime.md  schema.md  ui.md
docs/docs/examples/: inception-v3.md  mnist.md
docs/src/css/: custom.css
examples/FireNet/: FireNet.onnx  app.ipxml
examples/inception_v3/: app.ipxml  infer_app.ipxml  labels_imagenet_1k.txt
examples/mnist/: app.ipxml
examples/multimodal/: app.ipxml
installer/: version.bat  version.ps1  version.sh  windows.wxs
