[package]
name = "ipxml-runtime"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "ipxml"
path = "src/main.rs"

[[bin]]
name = "ipxml-runtime"
path = "src/main.rs"

[package.metadata.bundle]
name = "IPXml Runtime"
identifier = "com.ipxml.runtime"
version = "0.1.0"
copyright = "Copyright (c) Rihaan Meher 2026"
category = "DeveloperTool"
short_description = "IPXml AI model runtime"
long_description = "Runtime for executing IPXml declarative AI deployment schemas"

[dependencies]
clap = { version = "4", features = ["derive"] }
ipxml-bundle = { path = "../ipxml-bundle" }
ipxml-schema = { path = "../ipxml-schema" }
ipxml-ui-core = { path = "../ipxml-ui-core" }
ipxml-ui-egui = { path = "../ipxml-ui-egui" }
anyhow = "1"
serde_json = "1"
axum = { version = "0.7", features = ["multipart"] }
tokio = { version = "1.38", features = ["rt-multi-thread", "macros"] }
ort = { version = "2.0.0-rc.12", features = ["ndarray", "download-binaries"] }
rhai = "1"
