[package]
name = "ipxml-ui-egui"
version = "1.0.0"
edition = "2024"

[dependencies]
eframe = "0.27"
ipxcs-core = { path = "../ipxcs-core" }
ipxml-ui-core = { path = "../ipxml-ui-core" }
ipxml-schema = { path = "../ipxml-schema" }
anyhow = "1"
ndarray = "0.17"
image = "0.24"
ort = { version = "2.0.0-rc.12", features = ["ndarray", "download-binaries"] }
rfd = "0.14"
serde_yaml = "0.9"
rhai = "1"
hound = "3"
